edit phone-email controller

--- a/erasmus/src/erasmus/accounts/templates/accounts/change_preferences.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/change_preferences.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 
 {% block header_content %}
-<div class="header">Add Question To FAQ</div>
+<div class="header"> CHANGE PREFERENCES</div>
 {% endblock %}
 
 
