--- a/erasmus/src/erasmus/courses/templates/courses/waiting_courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/waiting_courses.html
@@ -23,12 +23,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                {% for user_course in unapproved_courses %}
+                {% for user_course in unapproved_unmerged_courses %}
                 <tr>
-                    <td><a href="../../profile/{{user_course.user.pk}}">{{user_course.user.user.name}} <i class="fas fa-external-link-alt"></i></a></td>
+                    <td><a>{{user_course.user.user.name}}</a></td>
                     <td><a>{{user_course.user.university}}</a></td>
                     <td><a>{{user_course.course.course_name}} waiting for approval</a></td>
-                    <td><a href=#><i class="fas fa-external-link-alt"></i></a></td>
+                    <td><a href="../../profile/{{user_course.user.pk}}"><i class="fas fa-external-link-alt"></i></a></td>
                     <td><a href="/approve-course/{{user_course.course.pk}}"><i class="fa fa-check"></i></a></td>
                     <td><a href="/reject-course/{{user_course.course.pk}}"><i class="fa fa-times"></i></a></td>
                 </tr>
