--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -55,7 +55,7 @@
                 <li><a href="../../profile"><i class="fas fa-user"></i>Profile</a></li>
                 <ul class="profile_settings">
                     <li id="11-holder"><a id="11" href="../../settings/password/"><i class="fas fa-pen"></i>Change Password</a></li>
-                    <li id="12-holder"><a id="12" href="../../change-phone"><i class="fas fa-inbox"></i>Change Phone</a></li>
+                    <li id="12-holder"><a id="12" href="../../change-phone"><i class="fas fa-inbox"></i>Change Phone/Email</a></li>
                     <li id="13-holder"><a id="13" href="../../edit-preferences/"><i class="fas fa-info-circle"></i>Preferences</a></li>
                     <li id="14-holder"><a id="14" href="{% url 'logout' %}"><i class="fas fa-times"></i>Log Out</a></li>
                 </ul>
