Document linkage fixed

--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -84,8 +84,8 @@
                         <th style="width:225px">Date</th>
                         <th style="width:350px" colspan="2">
                             Operations
-                            <a class="button" href="#">Upload
-                        </a></th>
+                            <a class="button" href="../../upload-documents/1/{{student.user.pk}}">Upload</a>
+                        </th>
                     </tr>
                     </thead>
                     <tbody>
