File sign column  added

--- a/erasmus/src/erasmus/courses/templates/courses/documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/documents.html
@@ -19,6 +19,7 @@
                     <th style="width:65px" id="count"></th>
                     <th style="width:175px">Type</th>
                     <th style="width:350px">Name</th>
+                    <th style="width:350px">Is signed by coordinator?</th>
                     <th style="width:300px">Date</th>
                     <th style="width:25px">File format</th>
                     <th style="width:350px" colspan="2">Operations</th>
@@ -30,6 +31,7 @@
                     <td style="width:65px" id="count"></td>
                     <td style="width:150px">{{document.document_type}}</td>
                     <td style="width:175px">{{document.document_name}}</td>
+                    <td style="width:175px">{{document.is_signed_coordinator}}</td>
                     <td style="width:200px">{{document.date}}</td>
                     <td style="width:175px">{{document.get_file_format}}</td>
                     <td style="width:350px;">
