--- a/erasmus/src/erasmus/accounts/static/styles.css
+++ b/erasmus/src/erasmus/accounts/static/styles.css
@@ -208,15 +208,15 @@ a[class="button"] {
   border-radius: 3px;
 }
 
-input[type=submit] {
-  width: 10%;
+.submit-final-list {
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
-  margin: 8px 0;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  right: 150px;
+  margin-right: 0;
 }
 
 input[type=url], input[type=text] {
