--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -43,7 +43,6 @@
                     <td>{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
                     {% endif %}
 
-
                     <td>
                         {% if course.approved %}
                         Approved
@@ -61,6 +60,7 @@
                     </td>
                 </tr>
                 {%endfor%}
+
                 {% for courseKey, courseList in user_merged_course_dict.items %}
                 {% for course in courseList %}
                 <tr>
@@ -107,7 +107,9 @@
                 </tfoot>
             </table>
         </div>
-        <a class="submit-final-list" href="#">Submit Final List</a>
+        <div style="padding: 0; display: flex; justify-content: right;">
+            <a style="margin-right: 20px; margin-left: auto;" class="submit-final-list" href="#">Submit Final List</a>
+        </div>
     </div>
     <div class="add_course">
 
