--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -199,6 +199,9 @@
                         {%endfor%}
                     </tbody>
                 </table>
+                <div style="padding: 0; display: flex; justify-content: right;">
+            <a style="margin-right: 20px; margin-left: auto;" class="final-list" href="#">Approve Final List</a>
+        </div>
             </div>
         </div>
         {%endif%}
