Approve/reject final list buttons for coordinator

--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -200,8 +200,9 @@
                     </tbody>
                 </table>
                 <div style="padding: 0; display: flex; justify-content: right;">
-            <a style="margin-right: 20px; margin-left: auto;" class="final-list" href="#">Approve Final List</a>
-        </div>
+                    <a style="margin-right: 20px; margin-left: auto;" class="final-list" href="#">Approve Final List</a>
+                    <a  class="final-list" href="#">Reject Final List</a>
+                </div>
             </div>
         </div>
         {%endif%}
