--- a/erasmus/src/erasmus/communication/templates/communication/detail-post.html
+++ b/erasmus/src/erasmus/communication/templates/communication/detail-post.html
@@ -1,5 +1,6 @@
  {% extends 'accounts/navbar.html' %}
 {% load static %}
+ {% load crispy_forms_tags %}
 
 {% block stylesheet %}
     <link rel="stylesheet" href="{% static 'styles.css' %}">
@@ -37,8 +38,10 @@
                 </div>
                 <div class="forum-reply-content" id="forum-reply-content">
                     <div id="reply-container">
-                        <input type="text" name="Reply" id="reply-to-post">
-                        <input type="submit" value="Reply" id="text-reply-btn" >
+                        {% csrf_token %}
+                        {{response_form|crispy}}
+
+                        <button class="btn btn-primary my-4" type="submit">Submit</button>
 
                     </div>
                 </div>
@@ -59,7 +62,9 @@
                             </div>
                         </div>
                         {% if forum_user.user.name == response.user.name %}
-                        <input type="submit" value="delete" style="width: 100px; height:40px; background-color:red;">
+                        <a href="../../delete-response/{{response.pk}}">
+                            <input type="submit" value="delete" style="width: 100px; height:40px; background-color:red;">
+                        </a>
                         {%endif%}
                     </div>
                 </tr>
