Reject button color changed

--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -179,7 +179,7 @@
                 </table>
                 <div style="padding: 0; display: flex; justify-content: right;">
                     <a style="margin-right: 20px; margin-left: auto;" class="final-list" href="#">Approve Final List</a>
-                    <a  class="final-list" href="#">Reject Final List</a>
+                    <a style="background-color: #db1430;" class="final-list" href="#">Reject Final List</a>
                 </div>
             </div>
 
