--- a/erasmus/src/erasmus/communication/static/detail-post.css
+++ b/erasmus/src/erasmus/communication/static/detail-post.css
@@ -8,7 +8,7 @@
     display: flex;
     height: auto;
     width: 98.5%;
-    background-color: #d9b778;
+    background-color: #f1050d;
     text-align: left;
     padding-top: 15px;
 
@@ -32,13 +32,11 @@
 
 .single-reply-content{
     display: flex;
-    background-color: rgba(0, 255, 255, 0.11);
     height: auto;
     width: 98.5%;
 }
 .single-replyto-reply-content{
     display: flex;
-    background-color: inherit;
     height: auto;
     padding-left: 5%;
 }
@@ -56,7 +54,6 @@
     height: 30px;
     justify-content: center;
     cursor: pointer;
-    background-color: inherit;
 }
 .reply-user-photo{
     padding-left: 5px;
@@ -67,18 +64,15 @@
 }
 .single-reply-text-content{
     width: 70%;
-    background-color: inherit;
 
     min-height: 30px;
     overflow: hidden;
 }
 .post-date{
-    background-color:inherit;
     height: 30px;
     width: 100px;
 }
 .post-hour{
-    background-color:inherit ;
     height: 30px;
     width: 60px;
 }
@@ -124,7 +118,6 @@
     height: fit-content;
 }
 #text-reply-btn{
-    background-color: inherit;
     height: fit-content;
     text-align: center;
     color: black;
