--- a/erasmus/src/erasmus/communication/static/detail-post.css
+++ b/erasmus/src/erasmus/communication/static/detail-post.css
@@ -8,7 +8,7 @@
     display: flex;
     height: auto;
     width: 98.5%;
-    background-color: #f1050d;
+    background-color: rgba(23, 20, 51, 0.16);
     text-align: left;
     padding-top: 15px;
 
@@ -32,11 +32,14 @@
 
 .single-reply-content{
     display: flex;
+      background-color: rgba(23, 20, 51, 0.16);
+
     height: auto;
     width: 98.5%;
 }
 .single-replyto-reply-content{
     display: flex;
+
     height: auto;
     padding-left: 5%;
 }
@@ -54,6 +57,7 @@
     height: 30px;
     justify-content: center;
     cursor: pointer;
+    background-color: inherit;
 }
 .reply-user-photo{
     padding-left: 5px;
@@ -64,15 +68,16 @@
 }
 .single-reply-text-content{
     width: 70%;
-
     min-height: 30px;
     overflow: hidden;
 }
 .post-date{
+    background-color:inherit;
     height: 30px;
     width: 100px;
 }
 .post-hour{
+    background-color:inherit ;
     height: 30px;
     width: 60px;
 }
@@ -118,6 +123,7 @@
     height: fit-content;
 }
 #text-reply-btn{
+    background-color: inherit;
     height: fit-content;
     text-align: center;
     color: black;
