Unmerged submit fixed

--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -49,7 +49,7 @@
                         {% elif course.is_rejected %}
                         Rejected
                         {% else %}
-                        <a class="button" style="display: flex"href="/remove-from-courses/{{course.pk}}">Submit for Approval</a>
+                        <a class="button" style="display: flex"href="/submit-course/{{course.pk}}">Submit for Approval</a>
                         {% endif %}
                         <!--elifWaiting for Approval-->
                     </td>
