Change courseview to return user courses

--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -101,7 +101,7 @@
                 </tbody>
                 <tfoot>
                 <tr>
-                    <td colspan="8">ECTS Total: sum</td>
+                    <td colspan="8">ECTS Total: {{total_ects_credit}}</td>
                     <td><a class="button" onclick="mergeCourses()" href="#">Merge</a></td>
                 </tr>
                 </tfoot>
